--- a/js/package.json
+++ b/js/package.json
@@ -53,7 +53,8 @@
     "cross-env": "^7.0.3",
     "next": "^11.0.1",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "swiper": "^7.4.1"
   },
   "devDependencies": {
     "@commitlint/cli": "^8.2.0",
