Fix FluidChains/metaplex changes

--- a/js/package.json
+++ b/js/package.json
@@ -15,7 +15,7 @@
   },
   "scripts": {
     "bootstrap": "lerna link && lerna bootstrap",
-    "build": "lerna run build --ignore=token-entangler --ignore=candy-machine-ui",
+    "build": "lerna run build --ignore=token-entangler --ignore=candy-machine-ui --ignore=gumdrop",
     "build-web": "lerna run build --stream --scope @oyster/common --scope web",
     "start": "cross-env CI=true lerna run start --scope @oyster/common --stream --parallel --scope web",
     "lint": "prettier -c 'packages/*/{src,test}/**/*.ts' && npm run lint:eslint",
@@ -36,11 +36,6 @@
   "resolutions": {
     "@types/react": "^17.0.16",
     "@solana/web3.js": "^1.31.0"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
   },
   "prettier": {
     "arrowParens": "avoid",
