--- a/js/packages/web/package.json
+++ b/js/packages/web/package.json
@@ -43,6 +43,8 @@
     "react-dom": "17.0.2",
     "react-intersection-observer": "^8.32.0",
     "react-masonry-css": "^1.0.16",
+    "react-aws-s3": "^1.5.0",
+    "react-aws-s3-typescript": "^1.1.3",
     "react-router-dom": "^5.2.0",
     "react-transition-group": "^4.4.2",
     "react-virtualized": "^9.22.3",
